--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "TimeDisparity",
   "description": "The temporal distance that divides by regions.",
   "version": "0.0.1",
+  "publisher": "yeejiac",
   "engines": {
     "vscode": "^1.92.0"
   },
