add birthday reminder and update readme

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "views": {
       "explorer": [
         {
-          "id": "TimeDisparity",
+          "id": "timedisparity",
           "name": "Time Disparity"
         }
       ]
