--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "timedisparity",
   "displayName": "TimeDisparity",
   "description": "The temporal distance that divides by regions.",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "publisher": "yeejiac",
   "engines": {
     "vscode": "^1.92.0"
@@ -22,6 +22,10 @@
         {
           "id": "timedisparity",
           "name": "Time Disparity"
+        },
+        {
+          "id": "uriView",
+          "name": "Generated URIs"
         }
       ]
     },
@@ -50,6 +54,10 @@
       {
           "command": "timedisparity.removeTimezone",
           "title": "Remove Timezone"
+      },
+      {
+        "command": "extension.generateUri",
+        "title": "Generate VSCode URI"
       }
     ],
     "menus": {
@@ -66,7 +74,13 @@
               "command": "timedisparity.removeTimezone",
               "title": "Remove Timezone"
             }
-        ]
+        ],
+        "editor/context": [
+        {
+          "command": "extension.generateUri",
+          "when": "editorTextFocus"
+        }
+      ]
     }
   },
   "scripts": {
